Keep Cursor and Icon themes lists sorted

BUG: 368600